app/objects/Professeur__c.object
<CustomObject>
    <fields>
        <fullName>Profil__c</fullName>
        <label>Profil</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Vaccataire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nombre_de_cours__c</fullName>
        <label>nombre de cours</label>
        <summaryForeignKey>Cours__c.professeur__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>personne__c</fullName>
        <label>personne</label>
        <referenceTo>Personne__c</referenceTo>
        <relationshipLabel>Professeurs</relationshipLabel>
        <relationshipName>Professeurs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Professeur</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Nom professeur</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Professeurs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>